<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="vertical" >

    <include
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        layout="@layout/header" />

    <LinearLayout
       	android:layout_width="match_parent"
       	android:layout_height="match_parent"
       	android:layout_below="@id/header"
       	android:background="@color/transparent"
	    android:gravity="top|center"
       	android:orientation="vertical" >
		
        <LinearLayout
	       	android:layout_width="match_parent"
	       	android:layout_height="62dp"
	       	android:background="@drawable/box_line2"
	       	android:gravity="center|left"
	       	android:orientation="vertical" >
       		
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/transparent"
		        android:gravity="center|left"
		        android:orientation="horizontal" >
	    		<LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="left"
			        android:orientation="vertical" >
		        
		           <TextView
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:paddingLeft="10dp"               
		               android:text="@string/notistart_time"
		               android:textColor="#333333"
		               android:textSize="14sp" />
		           
		           <TextView
		               android:id="@+id/start_time_text"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:paddingLeft="10dp"               
		               android:text="@string/none_setting"
		               android:textColor="#e10064"
		               android:textSize="12sp" />
		           
		       </LinearLayout>
           
	           <RelativeLayout
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:paddingRight="10dp" 
		           android:gravity="center_vertical|right">
	              
	               <Button
		               android:id="@+id/button_1"
		               android:layout_width="22dp"
		               android:layout_height="22dp"
		               android:gravity="center_vertical"
		               android:background="@drawable/ak_my_arlam_time"
		               android:visibility="visible" />
	           </RelativeLayout>
	      	</LinearLayout>
        </LinearLayout>
        
        <LinearLayout
	       	android:layout_width="match_parent"
	       	android:layout_height="62dp"
	       	android:background="@drawable/box_line2"
	       	android:gravity="center|left"
	       	android:orientation="vertical" >
       		
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/transparent"
		        android:gravity="center|left"
		        android:orientation="horizontal" >
	    		<LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="left"
			        android:orientation="vertical" >
		        
		           <TextView
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:paddingLeft="10dp"               
		               android:text="@string/notiend_time"
		               android:textColor="#333333"
		               android:textSize="14sp" />
		           
		           <TextView
		               android:id="@+id/end_time_text"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:paddingLeft="10dp"               
		               android:text="@string/none_setting"
		               android:textColor="#e10064"
		               android:textSize="12sp" />
		           
		       </LinearLayout>
           
	           <RelativeLayout
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:paddingRight="10dp" 
		           android:gravity="center_vertical|right">
	               
	               <Button
		               android:id="@+id/button_2"
		               android:layout_width="22dp"
		               android:layout_height="22dp"
		               android:gravity="center_vertical"
		               android:background="@drawable/ak_my_arlam_time"
		               android:visibility="visible" />
	           </RelativeLayout>
	      	</LinearLayout>
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>